Fix scrolling issue on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  background-color: #131313;
 }
 
 @supports (font-variation-settings: normal) {
